segundo commit tp_MVC

--- a/views/about.html
+++ b/views/about.html
@@ -16,7 +16,7 @@
         <a href="/about" class="mvc-bar-item mvc-button mvc-hide-small"
           ><i class="fa fa-user"></i> ABOUT</a
         >
-        <a href="#portfolio" class="mvc-bar-item mvc-button mvc-hide-small"
+        <a href="/#portfolio" class="mvc-bar-item mvc-button mvc-hide-small"
           ><i class="fa fa-th"></i> PORTFOLIO</a
         >
       </div>
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div class="mvc-content mvc-container mvc-padding-64" id="about">
+    <div class="mvc-content mvc-container mvc-padding-64" id="portfolio">
       <h3 class="mvc-center">I love photography</h3>
       <p class="mvc-center"><em>is a hobby photographer...</em></p>
       <p>
